kubernetes/overlays/prod/mongodb-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: supermock
spec:
  template:
    spec:
      containers:
        - name: mongodb
          resources:
            requests:
              memory: '1Gi'
              cpu: '500m'
            limits:
              memory: '2Gi'
              cpu: '1000m'
          args:
            - '--wiredTigerCacheSizeGB=1'
            - '--oplogSize=1024'
            - '--profile=1'
            - '--slowms=100'
