kubernetes/overlays/prod/redis-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: supermock
spec:
  template:
    spec:
      containers:
        - name: redis
          resources:
            requests:
              memory: '512Mi'
              cpu: '200m'
            limits:
              memory: '1Gi'
              cpu: '400m'
          args:
            - '--appendonly'
            - 'yes'
            - '--requirepass'
            - '$(REDIS_PASSWORD)'
            - '--maxmemory'
            - '800mb'
            - '--maxmemory-policy'
            - 'allkeys-lru'
            - '--save'
            - '900'
            - '1'
            - '--save'
            - '300'
            - '10'
            - '--save'
            - '60'
            - '10000'
